# agent-interop-london-hackathon-starter

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  FROZEN.md  HACKATHON.md  PLAN.md  README.md  SUBMITTING.md  TESTING.md  docker-route-override.ts  package.json
.claude/: launch.json
.claude/skills/create-a2ui-widget/: SKILL.md
a2a/: README.md
a2a/compliance/: check.ts
a2a/sample-subagent/: main.py
agent/: main.py  pyproject.toml
agent/src/: a2ui_dynamic_schema.py  a2ui_fixed_schema.py  query.py
agent/src/a2ui/: _safe.py
agent/src/a2ui/schemas/: project_dashboard_schema.json  project_detail_schema.json  risk_register_schema.json  sprint_board_schema.json  status_report_draft_schema.json  team_load_schema.json  update_feed_schema.json
agent/src/domains/: README.md
agent/src/domains/shopping/: tools.py
agent/src/tools/: project_detail.py
agent/src/widgets/: README.md  product_card.fixture.json  product_card.json  project_dashboard.fixture.json  project_dashboard.json  project_detail.fixture.json  project_detail.json  sprint_board.fixture.json  sprint_board.json  status_report_draft.fixture.json  status_report_draft.json
agent/tests/: test_schema_data_alignment.py
data/: projectops.json
docs/: README.md  anatomy-of-a-domain.md  customization-seams.md  forking-this-starter.md  troubleshooting.md
docs/cookbook/: legal-contract-review.md
other-examples/: PLAN.md  README.md
other-examples/a2ui-pdf-analyst/agent/: smoke_gemini_port.py
other-examples/a2ui-pdf-analyst/agent/src/: dynamic_agent.py
other-examples/edtech/: Dockerfile  EXAMPLE.json  README.md
other-examples/edtech/agent/: langgraph.json  pyproject.toml
other-examples/edtech/agent/edtech_agent/: __init__.py  graph.py  prompts.py  tools.py
other-examples/edtech/agent/edtech_agent/data/: __init__.py  students.py
other-examples/edtech/catalog/: definitions.ts  index.ts  renderers.tsx  theme.css
other-examples/edtech/schemas/: assignment_status.schema.json  outreach_batch.schema.json  student_profile.schema.json  student_roster.fixture.json  student_roster.schema.json
other-examples/healthcare/: EXAMPLE.json  README.md
other-examples/healthcare/agent/: langgraph.json  pyproject.toml
other-examples/healthcare/agent/healthcare_agent/: __init__.py  graph.py  tools.py
other-examples/healthcare/agent/healthcare_agent/data/: patients.json  vitals.json
other-examples/healthcare/catalog/: definitions.ts  index.ts  renderers.tsx  theme.css
other-examples/healthcare/schemas/: handoff_note_draft.fixture.json  handoff_note_draft.json  patient_detail.fixture.json  patient_detail.json  patient_roster.fixture.json  patient_roster.json
other-examples/legal-contract-review/: Dockerfile  README.md
other-examples/legal-contract-review/agent/: __init__.py  graph.py  langgraph.json  legal_db.py  pyproject.toml  queries.py  tools.py
other-examples/legal-contract-review/agent/legal_review_agent/: __init__.py  graph.py
other-examples/legal-contract-review/catalog/: definitions.ts  renderers.tsx
scripts/: explain.ts  load-test-gemini.py  new-example.sh  new-example.ts  new-widget.sh  probe-gemini.sh  smoke.ts  validate-widget.ts
src/app/: globals.css  layout.tsx
src/app/(default)/: layout.tsx  page.tsx
src/app/(edtech)/: layout.tsx
src/app/(edtech)/other-examples/edtech/: page.tsx
src/app/(healthcare)/: layout.tsx
src/app/(healthcare)/other-examples/healthcare/: page.tsx
src/app/(legal)/: layout.tsx
src/app/(legal)/other-examples/legal-contract-review/: page.tsx
src/app/(realestate)/: layout.tsx
src/app/(travel)/: layout.tsx
src/app/api/copilotkit/[[...slug]]/: route.ts
src/app/declarative-generative-ui/: definitions.ts  renderers.tsx
src/app/other-examples/: page.tsx
src/components/: BackgroundBlurCircles.tsx  BrandFrame.tsx  EnvelopeInspector.tsx  EnvelopeTimeline.tsx  ModeToggle.tsx
src/components/example-layout/: example-layout.css  index.tsx  mode-toggle.tsx
src/components/generative-ui/: animations.css  meeting-time-picker.tsx
src/components/generative-ui/charts/: bar-chart.tsx  config.ts  pie-chart.tsx
src/components/surface-canvas/: index.tsx
src/hooks/: use-envelope-stream.tsx  use-example-suggestions.tsx
src/lib/: a2ui-theme.css  envelope-kind-meta.ts  envelope-summary.ts  mirror-renderer.tsx  surface-bus.ts
