[project]
name = "legal-review-agent"
version = "0.1.0"
description = "LangGraph agent for the Contract Review Copilot example."
requires-python = ">=3.12"
dependencies = []

# The Python package lives in the sibling `legal_review_agent/` directory
# (dir name matches the import name), so setuptools auto-discovery picks
# it up with no package-dir remapping. langgraph loads the graph via
# `./legal_review_agent/graph.py:graph` (see langgraph.json), which keeps
# Python's package machinery intact and removes the need for the earlier
# `sys.path.insert(...)` workaround in graph.py. See audit item #6.
[tool.setuptools]
packages = ["legal_review_agent"]
